feat: Add proposal page, introduce detailed service pages, and update core navigation and metadata.

--- a/service.html
+++ b/service.html
@@ -440,7 +440,7 @@
         tabindex="-1"
       >
         <ul class="mobile-links">
-          <li><a href="/index.html" class="active">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <!-- Accordion: Services -->
           <li class="accordion-item" id="m-services-item">
             <button
@@ -449,7 +449,7 @@
               aria-expanded="false"
               aria-controls="m-services-panel"
             >
-              <a href="service.html">Services</a>
+              <a href="/service.html" class="active">Services</a>
               <i
                 class="fa-solid fa-chevron-down chevron"
                 aria-hidden="true"
@@ -468,7 +468,7 @@
                   aria-expanded="false"
                   aria-controls="m-hr-list"
                 >
-                  <a class="section-title"
+                  <a class="section-title" href="/services/talent-management-hr-solution.html"
                     >Talent Management &amp; HR Solutions</a
                   >
                   <i
@@ -478,32 +478,32 @@
                 </button>
                 <ul id="m-hr-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a href="/services/talent-management-hr#recruitment"
+                    <a href="/talent-management-hr-solution/recruitment-selection.html"
                       >Recruitment &amp; Selection</a
                     >
                   </li>
                   <li>
-                    <a href="/services/talent-management-hr#training"
+                    <a href="/talent-management-hr-solution/training-development.html"
                       >Training &amp; Development</a
                     >
                   </li>
                   <li>
-                    <a href="/services/talent-management-hr#outsourcing"
+                    <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                       >Talent &amp; Payroll Outsourcing</a
                     >
                   </li>
                   <li>
-                    <a href="/services/talent-management-hr#verification"
+                    <a href="/talent-management-hr-solution/background-checks-verification.html"
                       >Background Checks &amp; Verification</a
                     >
                   </li>
                   <li>
-                    <a href="/services/talent-management-hr#policies"
+                    <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                       >HR Policies &amp; Employee Handbook</a
                     >
                   </li>
                   <li>
-                    <a href="/services/talent-management-hr#career"
+                    <a href="/talent-management-hr-solution/career-service.html"
                       >Career Services</a
                     >
                   </li>
@@ -517,7 +517,7 @@
                   aria-expanded="false"
                   aria-controls="m-biz-list"
                 >
-                  <a href="#" class="section-title"
+                  <a href="/services/business-development-strategy.html" class="section-title"
                     >Business Development &amp; Strategy</a
                   >
                   <i
@@ -527,37 +527,37 @@
                 </button>
                 <ul id="m-biz-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a href="/services/business-strategy#research"
+                    <a href="/business-development/market-research-business-analysis.html"
                       >Market Research &amp; Business Analysis</a
                     >
                   </li>
                   <li>
-                    <a href="/services/business-strategy#models"
+                    <a href="/business-development/business-model-structure-design.html"
                       >Business Model &amp; Structure Design</a
                     >
                   </li>
                   <li>
-                    <a href="/services/business-strategy#execution"
+                    <a href="/business-development/corporate-strategy-execution.html"
                       >Corporate Strategy &amp; Execution</a
                     >
                   </li>
                   <li>
-                    <a href="/services/business-strategy#branding"
+                    <a href="/business-development/corporate-branding.html"
                       >Corporate Branding</a
                     >
                   </li>
                   <li>
-                    <a href="/services/business-strategy#process"
+                    <a href="/business-development/business-process-optimization.html"
                       >Business Process Optimization</a
                     >
                   </li>
                   <li>
-                    <a href="/services/business-strategy#valuation"
+                    <a href="/business-development/financial-modeling-valuation.html"
                       >Financial Modeling &amp; Valuation</a
                     >
                   </li>
                   <li>
-                    <a href="/services/business-strategy#audit"
+                    <a href="/business-development/auditing-reconciliation.html"
                       >Auditing &amp; Reconciliation</a
                     >
                   </li>
@@ -571,7 +571,7 @@
                   aria-expanded="false"
                   aria-controls="m-train-list"
                 >
-                  <a href="#" class="section-title"
+                  <a href="/services/professional-training-programme.html" class="section-title"
                     >Professional Training Programmes</a
                   >
                   <i
@@ -581,37 +581,37 @@
                 </button>
                 <ul id="m-train-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a href="/services/training-programmes#leadership"
+                    <a href="/professional-training/leadership-management.html"
                       >Leadership &amp; Management</a
                     >
                   </li>
                   <li>
-                    <a href="/services/training-programmes#hr"
+                    <a href="/professional-training/hr-people-maagement-training.html"
                       >HR &amp; People Management</a
                     >
                   </li>
                   <li>
-                    <a href="/services/training-programmes#finance"
+                    <a href="/professional-training/finance-accounting.html"
                       >Finance &amp; Accounting</a
                     >
                   </li>
                   <li>
-                    <a href="/services/training-programmes#tech"
+                    <a href="/professional-training/technology-data.html"
                       >Technology &amp; Data</a
                     >
                   </li>
                   <li>
-                    <a href="/services/training-programmes#ops"
+                    <a href="/professional-training/operation-supply-chain.html"
                       >Operations &amp; Supply Chain</a
                     >
                   </li>
                   <li>
-                    <a href="/services/training-programmes#hse"
+                    <a href="/professional-training/health-safety-environment.html"
                       >Health, Safety &amp; Environment (HSE)</a
                     >
                   </li>
                   <li>
-                    <a href="/services/training-programmes#sales"
+                    <a href="/professional-training/sales-marketing.html"
                       >Sales &amp; Marketing</a
                     >
                   </li>
@@ -621,7 +621,7 @@
           </li>
           <li><a href="/about.html">About us</a></li>
           <li><a href="/contact.html">Contact us</a></li>
-          <li><a href="/resources">Resources</a></li>
+          <!-- <li><a href="/resources">Resources</a></li> -->
         </ul>
       </nav>
     </header>
