--- a/contact.html
+++ b/contact.html
@@ -185,7 +185,7 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" class="active-navlink" aria-current="page"
+            <a href="/index.html" aria-current="page"
               >Home</a
             >
           </li>
@@ -526,7 +526,7 @@
             <a href="/about.html" class="nav-link">About us</a>
           </li>
           <li role="listitem" class="nav-item">
-            <a href="/contact.html" class="nav-link">Contact us</a>
+            <a href="/contact.html" class="active-navlink">Contact us</a>
           </li>
           <!-- <li role="listitem" class="nav-item">
             <a href="#" class="nav-link"
