--- a/about.html
+++ b/about.html
@@ -210,9 +210,7 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" class="active-navlink" aria-current="page"
-              >Home</a
-            >
+            <a href="/index.html" aria-current="page">Home</a>
           </li>
           <li role="listitem" class="nav-item services" id="service">
             <a href="/service.html" class="nav-link"
@@ -236,7 +234,8 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/talent-management-hr-solution/recruitment-selection.html"
+                        <a
+                          href="/talent-management-hr-solution/recruitment-selection.html"
                           ><strong>Recruitment &amp; Selection</strong>
                           <div class="item-sub">
                             Find and retain the right talent through a
@@ -252,7 +251,8 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/talent-management-hr-solution/training-development.html"
+                        <a
+                          href="/talent-management-hr-solution/training-development.html"
                           ><strong>Training &amp; Development</strong>
                           <div class="item-sub">
                             Tailored corporate programs that boost employee
@@ -267,7 +267,8 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
+                        <a
+                          href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                           ><strong>Talent &amp; Payroll Outsourcing</strong>
                           <div class="item-sub">
                             Stress-free HR and payroll solutions to save time
@@ -282,7 +283,8 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/talent-management-hr-solution/background-checks-verification.html"
+                        <a
+                          href="/talent-management-hr-solution/background-checks-verification.html"
                           ><strong>Background Checks &amp; Verification</strong>
                           <div class="item-sub">
                             Reduce risks with comprehensive employee and
@@ -294,7 +296,8 @@
                     <li role="listitem">
                       <i class="fa-solid fa-book icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
+                        <a
+                          href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                           ><strong>HR Policies &amp; Employee Handbook</strong>
                           <div class="item-sub">
                             Clear, transparent policies that align people with
@@ -309,7 +312,8 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/talent-management-hr-solution/career-service.html"
+                        <a
+                          href="/talent-management-hr-solution/career-service.html"
                           ><strong>Career Services</strong>
                           <div class="item-sub">
                             CV, LinkedIn, and professional profile optimization
@@ -335,7 +339,8 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/business-development/market-research-business-analysis.html"
+                        <a
+                          href="/business-development/market-research-business-analysis.html"
                           ><strong
                             >Market Research &amp; Business Analysis</strong
                           >
@@ -352,7 +357,8 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/business-development/business-model-structure-design.html"
+                        <a
+                          href="/business-development/business-model-structure-design.html"
                           ><strong
                             >Business Model &amp; Structure Design</strong
                           >
@@ -368,7 +374,8 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/business-development/corporate-strategy-execution.html"
+                        <a
+                          href="/business-development/corporate-strategy-execution.html"
                           ><strong>Corporate Strategy &amp; Execution</strong>
                           <div class="item-sub">
                             Align vision, people, and processes for measurable
@@ -394,7 +401,8 @@
                     <li role="listitem">
                       <i class="fa-solid fa-gears icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/business-development/business-process-optimization.html"
+                        <a
+                          href="/business-development/business-process-optimization.html"
                           ><strong>Business Process Optimization</strong>
                           <div class="item-sub">
                             Streamline operations and eliminate inefficiencies.
@@ -405,7 +413,8 @@
                     <li role="listitem">
                       <i class="fa-solid fa-coins icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/business-development/financial-modeling-valuation.html"
+                        <a
+                          href="/business-development/financial-modeling-valuation.html"
                           ><strong>Financial Modeling &amp; Valuation</strong>
                           <div class="item-sub">
                             Gain clarity on investments and performance.
@@ -419,7 +428,8 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/business-development/auditing-reconciliation.html"
+                        <a
+                          href="/business-development/auditing-reconciliation.html"
                           ><strong>Auditing &amp; Reconciliation</strong>
                           <div class="item-sub">
                             Ensure compliance, accuracy, and accountability.
@@ -444,7 +454,8 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/professional-training/leadership-management.html"
+                        <a
+                          href="/professional-training/leadership-management.html"
                           ><strong>Leadership &amp; Management</strong>
                           <div class="item-sub">
                             Develop emotionally intelligent leaders who inspire
@@ -456,7 +467,8 @@
                     <li role="listitem">
                       <i class="fa-solid fa-users icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/professional-training/hr-people-maagement-training.html"
+                        <a
+                          href="/professional-training/hr-people-maagement-training.html"
                           ><strong>HR &amp; People Management</strong>
                           <div class="item-sub">
                             Build HR teams that drive business success.
@@ -498,7 +510,8 @@
                     <li role="listitem">
                       <i class="fa-solid fa-truck icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/professional-training/operation-supply-chain.html"
+                        <a
+                          href="/professional-training/operation-supply-chain.html"
                           ><strong>Operations &amp; Supply Chain</strong>
                           <div class="item-sub">
                             Drive efficiency in procurement, inventory, and
@@ -513,7 +526,8 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/professional-training/health-safety-environment.html"
+                        <a
+                          href="/professional-training/health-safety-environment.html"
                           ><strong
                             >Health, Safety &amp; Environment (HSE)</strong
                           >
@@ -543,12 +557,13 @@
                 </ul>
               </div>
               <p class="mega-footer">
-                Unlock your career potential, <a href="/contact.html">Connect with us</a>
+                Unlock your career potential,
+                <a href="/contact.html">Connect with us</a>
               </p>
             </div>
           </li>
           <li role="listitem" class="nav-item">
-            <a href="/about.html" class="nav-link">About us</a>
+            <a href="/about.html" class="active-navlink">About us</a>
           </li>
           <li role="listitem" class="nav-item">
             <a href="/contact.html" class="nav-link">Contact us</a>
@@ -625,7 +640,9 @@
                   aria-expanded="false"
                   aria-controls="m-hr-list"
                 >
-                  <a class="section-title" href="/services/talent-management-hr-solution.html"
+                  <a
+                    class="section-title"
+                    href="/services/talent-management-hr-solution.html"
                     >Talent Management &amp; HR Solutions</a
                   >
                   <i
@@ -635,27 +652,32 @@
                 </button>
                 <ul id="m-hr-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a href="/talent-management-hr-solution/recruitment-selection.html"
+                    <a
+                      href="/talent-management-hr-solution/recruitment-selection.html"
                       >Recruitment &amp; Selection</a
                     >
                   </li>
                   <li>
-                    <a href="/talent-management-hr-solution/training-development.html"
+                    <a
+                      href="/talent-management-hr-solution/training-development.html"
                       >Training &amp; Development</a
                     >
                   </li>
                   <li>
-                    <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
+                    <a
+                      href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                       >Talent &amp; Payroll Outsourcing</a
                     >
                   </li>
                   <li>
-                    <a href="/talent-management-hr-solution/background-checks-verification.html"
+                    <a
+                      href="/talent-management-hr-solution/background-checks-verification.html"
                       >Background Checks &amp; Verification</a
                     >
                   </li>
                   <li>
-                    <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
+                    <a
+                      href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                       >HR Policies &amp; Employee Handbook</a
                     >
                   </li>
@@ -674,7 +696,9 @@
                   aria-expanded="false"
                   aria-controls="m-biz-list"
                 >
-                  <a href="/services/business-development-strategy.html" class="section-title"
+                  <a
+                    href="/services/business-development-strategy.html"
+                    class="section-title"
                     >Business Development &amp; Strategy</a
                   >
                   <i
@@ -684,17 +708,20 @@
                 </button>
                 <ul id="m-biz-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a href="/business-development/market-research-business-analysis.html"
+                    <a
+                      href="/business-development/market-research-business-analysis.html"
                       >Market Research &amp; Business Analysis</a
                     >
                   </li>
                   <li>
-                    <a href="/business-development/business-model-structure-design.html"
+                    <a
+                      href="/business-development/business-model-structure-design.html"
                       >Business Model &amp; Structure Design</a
                     >
                   </li>
                   <li>
-                    <a href="/business-development/corporate-strategy-execution.html"
+                    <a
+                      href="/business-development/corporate-strategy-execution.html"
                       >Corporate Strategy &amp; Execution</a
                     >
                   </li>
@@ -704,12 +731,14 @@
                     >
                   </li>
                   <li>
-                    <a href="/business-development/business-process-optimization.html"
+                    <a
+                      href="/business-development/business-process-optimization.html"
                       >Business Process Optimization</a
                     >
                   </li>
                   <li>
-                    <a href="/business-development/financial-modeling-valuation.html"
+                    <a
+                      href="/business-development/financial-modeling-valuation.html"
                       >Financial Modeling &amp; Valuation</a
                     >
                   </li>
@@ -728,7 +757,9 @@
                   aria-expanded="false"
                   aria-controls="m-train-list"
                 >
-                  <a href="/services/professional-training-programme.html" class="section-title"
+                  <a
+                    href="/services/professional-training-programme.html"
+                    class="section-title"
                     >Professional Training Programmes</a
                   >
                   <i
@@ -743,7 +774,8 @@
                     >
                   </li>
                   <li>
-                    <a href="/professional-training/hr-people-maagement-training.html"
+                    <a
+                      href="/professional-training/hr-people-maagement-training.html"
                       >HR &amp; People Management</a
                     >
                   </li>
@@ -763,7 +795,8 @@
                     >
                   </li>
                   <li>
-                    <a href="/professional-training/health-safety-environment.html"
+                    <a
+                      href="/professional-training/health-safety-environment.html"
                       >Health, Safety &amp; Environment (HSE)</a
                     >
                   </li>
@@ -782,6 +815,7 @@
         </ul>
       </nav>
     </header>
+
     <!-- Main -->
     <main
       id="main"
@@ -805,26 +839,28 @@
       <div data-aos="fade-up" class="contact-hero__collage" aria-hidden="true">
         <img
           class="collage__card collage__card--left"
-          src="/images/contact/hero-card-left.webp"
-          alt=""
+          src="/images/about/hero-card-left.webp"
+          alt="Facilitator guiding a small group of professionals through a strategy exercise during a workshop."
           loading="lazy"
           decoding="async"
           width="280"
           height="320"
         />
+
         <img
           class="collage__card collage__card--center"
-          src="/images/contact/hero-card-center.webp"
-          alt=""
+          src="/images/about/hero-card-center.webp"
+          alt="Diverse leadership team seated around a table, reviewing charts and discussing a business plan."
           loading="lazy"
           decoding="async"
           width="320"
           height="360"
         />
+
         <img
           class="collage__card collage__card--right"
-          src="/images/contact/hero-card-right.webp"
-          alt=""
+          src="/images/about/hero-card-right.webp"
+          alt="Consultant presenting insights on a screen to clients during a focused review meeting."
           loading="lazy"
           decoding="async"
           width="180"
@@ -1095,7 +1131,12 @@
       <div data-aos="fade-left" data-aos="fade-right" class="team-list">
         <!-- MEMBER 1 -->
         <div class="team-member">
-          <div class="profile-img"></div>
+          <div class="profile-img">
+            <img
+              src="/images/about/john-adebayo.webp"
+              alt="John Adebayo Profile Image"
+            />
+          </div>
 
           <div class="profile-info">
             <h3 class="profile-name">John Adebayo</h3>
@@ -1123,7 +1164,10 @@
         <!-- MEMBER 2 -->
         <div class="team-member">
           <div class="profile-img">
-            <img src="/images/about/maria.png" alt="Maria Okonkwo Profile Image">
+            <img
+              src="/images/about/maria-okonwo.webp"
+              alt="Maria Okonkwo Profile Image"
+            />
           </div>
 
           <div class="profile-info">
@@ -1151,7 +1195,12 @@
 
         <!-- MEMBER 3 -->
         <div class="team-member">
-          <div class="profile-img"></div>
+          <div class="profile-img">
+            <img
+              src="/images/about/david-nnamdi.webp"
+              alt="David Profile Image"
+            />
+          </div>
 
           <div class="profile-info">
             <h3 class="profile-name">David Nnamdi</h3>
