--- a/services/talent-management-hr-solution.html
+++ b/services/talent-management-hr-solution.html
@@ -685,15 +685,9 @@
     <main class="hero">
         <h1>Build a workforce that performs, <br />grows and stays</h1>
         <p>
-          At Conceptual Integrated Consulting Limited (CICL), we help
-          organisations move beyond improvised HR. Our Talent Management &amp; HR
-          Solutions give you structured systems for hiring, developing and
-          retaining the people who actually drive your strategy—without losing
-          sight of culture, compliance or cost. Whether you are an SME
-          formalising your first HR processes or an established organisation
-          redesigning your people strategy, we help you build teams, structures
-          and policies that can stand in front of auditors, boards and employees
-          with confidence.
+          Conceptual Integrated Consulting Limited (CICL) helps organisations move beyond improvised HR. Our Talent Management &amp; HR
+  Solutions give you structured systems for hiring, developing and retaining the
+  people who drive your strategy in a way that protects culture, compliance and cost.
         </p>
         <div class="action-links">
           <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
