--- a/services/business-development-strategy.html
+++ b/services/business-development-strategy.html
@@ -229,7 +229,7 @@
                   <li role="listitem" class="mega-col-list active-navlink">
                     Business Development &amp; Strategy
                     <a href="/services/business-development-strategy.html"
-                     ><i class="fa-solid fa-link"></i> Explore</a
+                     class="active-navlink"><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
                   <ul class="accordion-content">
