--- a/services/professional-training-programme.html
+++ b/services/professional-training-programme.html
@@ -726,7 +726,7 @@
         real decisions and measurable improvements in performance.
       </p>
 
-      <div class="action-links">
+      <div data-aos="fade-up" data-aos="fade-down" class="hero-links">
         <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
         <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
       </div>
@@ -835,7 +835,7 @@
     </main>
 
     <!-- AT A GLANCE / PROOF STRIP -->
-    <section class="service-summary" aria-label="Service at a glance">
+    <section class="service-summary" aria-label="Service at a glance" data-aos="fade-up" data-aos="fade-down" >
       <div class="service-summary__grid">
         <article class="summary-item">
           <h3>7+ programme clusters</h3>
@@ -862,7 +862,7 @@
     </section>
 
     <!-- WHO THIS IS FOR -->
-    <section class="service-targets">
+    <section class="service-targets" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Who our programmes are for</h4>
         <h2>Learning journeys for leaders, managers and technical teams</h2>
@@ -912,7 +912,7 @@
     </section>
 
     <!-- OUR TRAINING PHILOSOPHY -->
-    <section class="service-problems">
+    <section class="service-problems" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Our philosophy</h4>
         <h2>How we make training translate into performance</h2>
@@ -955,7 +955,7 @@
     </section>
 
     <!-- PROGRAMME CLUSTERS -->
-    <section id="modules" class="service-modules">
+    <section id="modules" class="service-modules" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Programme clusters</h4>
         <h2>Structured clusters for the skills your organisation needs</h2>
@@ -1095,7 +1095,7 @@
     </section>
 
     <!-- ##### How We Work Area Starts ##### -->
-    <section
+    <section  data-aos="fade-up" data-aos="fade-down" 
       class="container elementor-section elementor-top-section elementor-element elementor-element-48666b1 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
       data-id="48666b1"
       data-element_type="section"
@@ -1402,7 +1402,7 @@
     </section> -->
 
     <!-- OUTCOMES & PROOF -->
-    <section id="outcomes" class="service-outcomes">
+    <section data-aos="fade-up" data-aos="fade-down" id="outcomes" class="service-outcomes">
       <div class="section-header">
         <h4 class="section-tag">Outcomes</h4>
         <h2>What CICL training programmes change for you</h2>
@@ -1452,7 +1452,7 @@
     </section>
 
     <!-- ENGAGEMENT MODELS -->
-    <section id="engagements" class="service-engagements">
+    <section id="engagements" class="service-engagements" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Delivery formats</h4>
         <h2>Ways to work with CICL on Professional Training</h2>
@@ -1484,7 +1484,7 @@
     </section>
 
     <!-- FAQS -->
-    <section id="faqs" class="service-faqs">
+    <section id="faqs" class="service-faqs" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">FAQs</h4>
         <h2>Common questions about Professional Training Programmes</h2>
@@ -1525,7 +1525,7 @@
     </section>
 
     <!-- FINAL CTA -->
-    <section class="service-cta">
+    <section class="service-cta" data-aos="fade-up" data-aos="fade-down" >
       <div class="service-cta__content">
         <h2>Ready to align learning with your strategy?</h2>
         <p>
