--- a/services/talent-management-hr-solution.html
+++ b/services/talent-management-hr-solution.html
@@ -108,7 +108,7 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" class="active-navlink" aria-current="page"
+            <a href="/index.html" aria-current="page"
               >Home</a
             >
           </li>
@@ -121,9 +121,9 @@
             <div class="mega-menu" aria-hidden="">
               <div class="mega-container">
                 <ul role="list" class="mega-col">
-                  <li role="listitem" class="mega-col-list">
+                  <li role="listitem" class="mega-col-list active-navlink">
                     Talent Management &amp; HR Solutions
-                    <a href="/services/talent-management-hr-solution.html"
+                    <a href="/services/talent-management-hr-solution.html" class="active-navlink"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -689,7 +689,7 @@
   Solutions give you structured systems for hiring, developing and retaining the
   people who drive your strategy in a way that protects culture, compliance and cost.
         </p>
-        <div class="action-links">
+        <div data-aos="fade-up" data-aos="fade-down"  class="hero-links">
           <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
           <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
         </div>
