--- a/services/talent-management-hr-solution.html
+++ b/services/talent-management-hr-solution.html
@@ -694,7 +694,7 @@
           <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
         </div>
 
-      <div class="horizontal-carousel-container">
+      <div class="horizontal-carousel-container" data-aos="fade-up" data-aos="fade-down" >
         <div class="horizontal-column column-right">
           <div class="home-card-track track-right">
             <div class="hero-image-card card-1">
@@ -798,7 +798,7 @@
     </main>
 
     <!-- AT A GLANCE / PROOF STRIP -->
-    <section class="service-summary" aria-label="Service at a glance">
+    <section class="service-summary" aria-label="Service at a glance" data-aos="fade-up" data-aos="fade-down" >
       <div class="service-summary__grid">
         <article class="summary-item">
           <h3>6+ integrated talent modules</h3>
@@ -825,7 +825,7 @@
     </section>
 
     <!-- WHO THIS IS FOR -->
-    <section class="service-targets">
+    <section class="service-targets" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Who we support</h4>
         <h2>Designed for organisations serious about people &amp; performance</h2>
@@ -875,7 +875,7 @@
     </section>
 
     <!-- PROBLEMS WE SOLVE -->
-    <section class="service-problems">
+    <section class="service-problems" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Why this matters now</h4>
         <h2>Why talent management can’t be improvised anymore</h2>
@@ -931,7 +931,7 @@
     </section>
 
     <!-- SERVICE MODULES (SUBPAGES) -->
-    <section id="modules" class="service-modules">
+    <section id="modules" class="service-modules" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Service modules</h4>
         <h2>An integrated suite of Talent Management &amp; HR solutions</h2>
@@ -1057,6 +1057,7 @@
 
     <!-- ##### How We Work Area Starts ##### -->
     <section
+     data-aos="fade-up" data-aos="fade-down" 
       class="container elementor-section elementor-top-section elementor-element elementor-element-48666b1 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
       data-id="48666b1"
       data-element_type="section"
@@ -1355,7 +1356,7 @@
     </section> -->
 
     <!-- OUTCOMES & PROOF -->
-    <section id="outcomes" class="service-outcomes">
+    <section id="outcomes" class="service-outcomes" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Outcomes</h4>
         <h2>What this service changes for you</h2>
@@ -1405,7 +1406,7 @@
     </section>
 
     <!-- ENGAGEMENT MODELS -->
-    <section id="engagements" class="service-engagements">
+    <section id="engagements" class="service-engagements" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Engagement models</h4>
         <h2>Ways to work with CICL on Talent Management &amp; HR</h2>
@@ -1444,7 +1445,7 @@
     </section>
 
     <!-- FAQS -->
-    <section id="faqs" class="service-faqs">
+    <section id="faqs" class="service-faqs" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">FAQs</h4>
         <h2>Common questions about Talent Management &amp; HR Solutions</h2>
@@ -1487,7 +1488,7 @@
     </section>
 
     <!-- FINAL CTA -->
-    <section class="service-cta">
+    <section class="service-cta" data-aos="fade-up" data-aos="fade-down" >
       <div class="service-cta__content">
         <h2>Ready to professionalise your HR and talent systems?</h2>
         <p>
