--- a/services/business-development-strategy.html
+++ b/services/business-development-strategy.html
@@ -731,7 +731,7 @@
         <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
       </div>
 
-      <div class="horizontal-carousel-container">
+      <div class="horizontal-carousel-container" data-aos="fade-up" data-aos="fade-down" >
         <div class="horizontal-column column-right">
           <div class="home-card-track track-right">
             <div class="hero-image-card card-1">
@@ -835,7 +835,7 @@
     </main>
 
     <!-- AT A GLANCE / PROOF STRIP -->
-    <section class="service-summary" aria-label="Service at a glance">
+    <section class="service-summary" aria-label="Service at a glance" data-aos="fade-up" data-aos="fade-down" >
       <div class="service-summary__grid">
         <article class="summary-item">
           <h3>Insight → design → execution → review</h3>
@@ -862,7 +862,7 @@
     </section>
 
     <!-- WHO THIS IS FOR -->
-    <section class="service-targets">
+    <section class="service-targets" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Who this is for</h4>
         <h2>Strategy support for leaders driving <br />growth and change</h2>
@@ -912,7 +912,7 @@
     </section>
 
     <!-- PROBLEMS WE SOLVE -->
-    <section class="service-problems">
+    <section class="service-problems" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Challenges</h4>
         <h2>Strategy problems we see every day</h2>
@@ -976,7 +976,7 @@
     </section>
 
     <!-- SERVICE MODULES -->
-    <section id="modules" class="service-modules">
+    <section id="modules" class="service-modules" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Service modules</h4>
         <h2>Business Development &amp; Strategy services</h2>
@@ -1126,6 +1126,7 @@
 
     <!-- ##### How We Work Area Starts ##### -->
     <section
+     data-aos="fade-up" data-aos="fade-down" 
       class="container elementor-section elementor-top-section elementor-element elementor-element-48666b1 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
       data-id="48666b1"
       data-element_type="section"
@@ -1492,7 +1493,7 @@
     </section> -->
 
     <!-- OUTCOMES & PROOF -->
-    <section id="outcomes" class="service-outcomes">
+    <section id="outcomes" class="service-outcomes" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Outcomes</h4>
         <h2>What you can expect from our strategy work</h2>
@@ -1549,7 +1550,7 @@
     </section>
 
     <!-- ENGAGEMENT MODELS -->
-    <section id="engagements" class="service-engagements">
+    <section id="engagements" class="service-engagements" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">Engagement models</h4>
         <h2>Ways to work with CICL on Business Development &amp; Strategy</h2>
@@ -1581,7 +1582,7 @@
     </section>
 
     <!-- FAQS -->
-    <section id="faqs" class="service-faqs">
+    <section id="faqs" class="service-faqs" data-aos="fade-up" data-aos="fade-down" >
       <div class="section-header">
         <h4 class="section-tag">FAQs</h4>
         <h2>Common questions about Business Development &amp; Strategy</h2>
@@ -1624,7 +1625,7 @@
     </section>
 
     <!-- FINAL CTA -->
-    <section class="service-cta">
+    <section class="service-cta" data-aos="fade-up" data-aos="fade-down" >
       <div class="service-cta__content">
         <h2>
           Is your organisation working hard but not always in the same
