--- a/services/talent-management-hr-solution.html
+++ b/services/talent-management-hr-solution.html
@@ -113,7 +113,7 @@
             >
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="nav-link"
+            <a href="/service.html" class="active-navlink"
               >Our Services
               <span class="caret"><i class="fa-solid fa-chevron-down"></i></span
             ></a>
