--- a/contact.html
+++ b/contact.html
@@ -539,13 +539,13 @@
 
       <div class="actions">
         <a
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
         >
         <a
-          href="proposal.html"
+          href="/proposal.html"
           class="btn-ghost"
           data-analytics="cta_request_proposal"
           >Request Proposal</a
