--- a/proposal.html
+++ b/proposal.html
@@ -470,7 +470,7 @@
 
       <div class="actions">
         <a
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
@@ -719,9 +719,9 @@
             enctype="multipart/form-data"
             novalidate
           >
-            <!-- CONTACT DETAILS -->
+            <!-- PROPOSAL DETAILS -->
             <fieldset class="proposal-fieldset">
-              <legend>Contact details</legend>
+              <legend>Proposal details</legend>
               <p class="fieldset-intro">
                 We’ll use these details to follow up on your request.
               </p>
