--- a/contact.html
+++ b/contact.html
@@ -539,7 +539,7 @@
 
       <div class="actions">
         <a
-          href="/booking.html"
+          href="/contact.html#contact-form"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
@@ -894,6 +894,7 @@
       </div>
 
       <form
+      id="contact-form"
         class="contact-form"
         action="/api/contact"
         method="post"
