--- a/services/professional-training-programme.html
+++ b/services/professional-training-programme.html
@@ -481,7 +481,7 @@
 
       <div class="actions">
         <a
-          href="/booking.html"
+          href="/contact.html#contact-form"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
