--- a/professional-training/operation-supply-chain.html
+++ b/professional-training/operation-supply-chain.html
@@ -564,7 +564,7 @@
 
       <div class="actions">
         <a
-          href="/booking.html"
+          href="/contact.html#contact-form"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
